# Wieldy-React-Dashboard-Template

./: .env.sample  .gitignore  README.md  package-lock.json  package.json
api-demo/api-demo/api-demo/: pyproject.toml
api-demo/api-demo/api-demo/api-demo/: main.py
api-demo/api-demo/api-demo/tests/: test_api_demo.py
public/: index.html  manifest.json
public/css/: blue.css  dark_blue.css  dark_theme.css  deep_orange.css  light_blue.css  light_purple.css  light_purple_1.css  light_purple_2.css  orange.css  red.css  style.css
src/: NextApp.js
src/appRedux/actions/: Contact.js
src/appRedux/reducers/: Auth.js
src/appRedux/store/: index.js
src/components/AppModuleHeader/: index.js
src/components/Finance/: CollapsePanel.js  DataTable.js
src/components/Report/: ReportBarChart.js
src/components/Reports/: MyReportsTable.js  ReportsSideNav.js
src/components/SocialMedia/: AddAccount.js  AddComment.js  AddComment1.js  AddSocialAccount.js  AddTags.js  BarCharts.js  FollowerGraph.js  SchedulePost.js
src/components/Table/: AgreementsTable.js  PerformanceTable.js  TrainingTable.js  TransactionsTable.js
src/components/Upload/: UploadClick.js
src/components/Widgets/: ProjectWidget.js
src/components/analytics/: Analytics.js  CSVView.js  ErrorLog.js  dropzoneComponent.js
src/components/dashboard/: GrowthCard.js  LineIndicator.js  NewCustomers.js  RewardCard.js  SendMoney.js  (+3 more)
src/containers/: SignIn.js  SignUp.js
src/mobx/: csvContext.js  csvStore.js
src/routes/: index.js
src/styles/: dark-theme.less  styles.less  variables.less
src/util/: config.js
(+268 files in other folders)
