[tool.poetry]
name = "api-demo"
version = "0.1.0"
description = ""
authors = ["Datta, Adhokshith <Adhokshith.Datta@anthem.com>"]

[tool.poetry.dependencies]
python = "^3.7.3"
fastapi = "^0.63.0"
requests = "^2.25.1"
uvicorn = "^0.13.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
